[metadata]
name = reshepy
version = 0.0.1
description = reshepy: reverse shell client
url = https://github.com/umaumax/reshepy
author = umaumax
author_email =
license = MIT
long_description = file: README.md

[options]
zip_safe = False
install_requires =
packages = find:
entry_points = file: entry_points.cfg

[options.packages.find]
exclude = tests
